Fri May 16 18:03:09 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        Merged dre_osh_01 up to the main and rebranched to dre_osh_02

        * ace/config-all.h:
          Cosmetic changes.

        * ace/os_include/*.h:
          Added extern "C" begin and end brackets to all files, even those
          with not additions, and places all additions inside the extern
          "C" {}'s.  Rearranged some of the #ifdef's and moved includes to
          the top of the files so that only those headers that need to be
          are couched in extern "C".

Thu May 15 17:01:28 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/OS.h:
          Adding #include of ace/os_include/sys/sem.h and
          ace/os_include/errno.h/

        * ace/config-win32-msvc.h:
          Added ACE_LACKS_DIRENT_H, ACE_LACKS_DLFCN_H,
          ACE_LACKS_NETDB_H, and ACE_LACKS_NET_IF_H defines.

        * ace/os_include/dlfcn.h:
        * ace/os_include/sys/mman.h:
          Rearranged ACE_WIN32 #ifdef's.

        * ace/os_include/limits.h:
          Fixed a typo.

Thu May 15 00:12:34 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/os_include/limits.h:
        * ace/os_include/dirent.h:
        * ace/os_include/netdb.h:
          Moved MAXNAMLEN define from limits.h to dirent.h, and
          MAXHOSTNAMELEN from limits.h to netdb.h to clear up
          warnings on Solaris.

Wed May 14 17:40:28 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/OS.h:
          Moved more code, as listed below.

        * ace/Default_Constants.h:
          Moved ACE_DIRECTORY_SEPERATOR_*, ACE_PLATFORM_*,
          ACE_LD_SEARCH_PATH_*, ACE_DLL_*, ACE_DEFAULT_SVC_CONF,
          ACE_DEFAULT_[LOCAL|GLOBAL]NAME_*, ACE_DEFAULT_NAMESPACE_*,
          ACE_DEFAULT_THREAD_PRIORITY, and ACE_MAX_DEFAULT_PORT
          defines here.

        * ace/Global_Macros.h:
          Moved the Service Configurator macros here.

        * ace/Handle_Set.h:
        * ace/os_include/sys/select.h: